--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,110 @@
+@import url('http://fonts.cdnfonts.com/css/redkost-comic');
+@import url('http://fonts.cdnfonts.com/css/poppins');
+
+
+.container-input__home{
+  display: flex;
+  position: relative;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  background: linear-gradient(125deg, #ffecec 0%, #ffecec 40%, #ffb2b2 calc(40% + 1px), #ffb2b2 60%, #ff7e5e calc(60% + 1px), #ff5e5e 72%, #db7e7e calc(72% + 1px), #ff3e3e 100%);
+}
+
+.container-home__image h2{
+  position: absolute;
+  z-index: 10;
+  font-size: 3rem;
+  font-family: 'Redkost Comic', sans-serif;                                             
+  text-shadow:rgba(0, 0, 0, 0.07) 2px 1px 2px, rgba(0, 0, 0, 0.07) 3px 3px 2px, rgba(0, 0, 0, 0.07) 3px 4px 4px, rgba(0, 0, 0, 0.07) 0px 8px 8px, rgba(0, 0, 0, 0.07) 0px 16px 16px;
+  color: rgb(59, 55, 55);
+  font-weight: 100;
+  left: 0px;
+  top: 150px;
+  padding-left: 20px;
+}
+.container-home__form{
+  position: relative;
+  width: 100vw;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.container-home__form form{
+  position: absolute;
+  top: 80%;
+  z-index: 11;
+}
+.container-home__image{
+  position: relative;
+}
+
+
+.home-image{
+  width: 530px;
+  position: relative;
+  left: 200px;
+}
+
+.custom-btn {
+  width: 150px;
+  height: 40px;
+  color: #fff;
+  border-radius: 5px;
+  padding: 0px 25px;
+  font-family: 'Lato', sans-serif;
+  font-weight: 500;
+  background: transparent;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  box-shadow:inset 2px 2px 2px 0px rgba(255, 255, 255, 0.158),
+  7px 7px 20px 0px rgba(0,0,0,.1),
+  4px 4px 5px 0px rgba(0,0,0,.1);
+  outline: none;
+}
+.btn-11 {
+  border: none;
+  background: rgb(251,33,117);
+  background: linear-gradient(0deg, rgb(251, 33, 33) 0%, rgb(234, 76, 76) 100%);
+  color: #fff;
+  overflow: hidden;
+}
+.btn-11:hover {
+  text-decoration: none;
+  color: #fff;
+}
+.btn-11:before {
+  position: absolute;
+  content: '';
+  display: inline-block;
+  top: -180px;
+  left: 0;
+  width: 30px;
+  height: 100%;
+  background-color: #fff;
+  animation: shiny-btn1 3s ease-in-out infinite;
+}
+
+.btn-11:active{
+  box-shadow:  4px 4px 6px 0 rgba(255, 255, 255, 0),
+  -4px -4px 6px 0 rgba(116, 125, 136, 0), 
+  inset -4px -4px 6px 0 rgba(255, 255, 255, 0),
+  inset 4px 4px 6px 0 rgba(0, 0, 0, 0);
+}
+
+
+@keyframes shiny-btn1 {
+  0% { -webkit-transform: scale(0) rotate(45deg); opacity: 0; }
+  80% { -webkit-transform: scale(0) rotate(45deg); opacity: 0.5; }
+  81% { -webkit-transform: scale(4) rotate(45deg); opacity: 1; }
+  100% { -webkit-transform: scale(50) rotate(45deg); opacity: 0; }
+}
+
 .pokedex-container{
   background-color: crimson;
   height: 120px;
@@ -49,7 +156,7 @@ form input{
   padding: 0 20px;
   border: none;
   border-radius: 6px;
-  box-shadow: 12px 6px 20px #0c0c0c34;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
 }
 form input:checked{
   border: 1px solid black;
@@ -60,7 +167,7 @@ form select{
   padding: 0px 20px;
   border: none;
   border-radius: 6px;
-  box-shadow: 12px 6px 20px #0c0c0c34;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
   cursor: pointer;
 }
 
@@ -68,8 +175,24 @@ form select:active{
   box-shadow: none;
 }
 
+form button{
+  width: 150px;
+  padding: 0px 20px;
+  border: none;
+  border-radius: 6px;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 10px 15px -3px, rgba(0, 0, 0, 0.05) 0px 4px 6px -2px;
+  cursor: pointer;
+  background-color: crimson;
+  color: white;
+
+}
+
+form button:active{
+  box-shadow: none;
+}
+
 h2{
-  font-weight: 100;
+  font-weight: 300;
   margin: 20px;
 }
 
@@ -77,7 +200,9 @@ h2 span{
   color: crimson;
 }
 
-
+h3{
+  margin-bottom: 10px;
+}
 
 .pagination-container {
   display: flex;
@@ -127,7 +252,7 @@ h2 span{
   flex-wrap: wrap;
   gap: 90px;
   justify-content: center;
-  padding: 10px 90px;
+  padding: 10px 90px 90px 90px;
   margin-top: 30px;
 }
 .poison {
@@ -282,11 +407,17 @@ h2 span{
   background: #595761;
   background: linear-gradient(0deg,#9d9d9e 0%,#75747c 48%,#3f3d44 100%);
 }
+
+.container-icons__padre{
+  display: flex;
+  gap: 20px;
+  justify-content: center;
+  flex-wrap: wrap;
+}
 .icon {
   height: 30px;
   width: 30px;
   padding: 3px;
-  margin-right: 13px;
   transition: all .2s;
   border-radius: .28571429rem 0 0 .28571429rem;
 }
@@ -295,17 +426,19 @@ h2 span{
   transform: scale(1.1);
   cursor: pointer;
 }
+
 .container-icons{
   display: flex;
-  align-items: center;
-  justify-content: flex-start;
-  background-color: #e8e8e8;
-  color: black;
   width: 110px;
-  margin: 10px 0;
-  border-radius: .28571429rem
 }
 
+.container-icons_span{
+  background-color: #e8e8e8;
+  width: 80px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
 
 /* antes de la tragedia  */
 
@@ -320,8 +453,9 @@ h2 span{
 body {
   font-family: "Roboto", sans-serif;
   background: #f3faf6;
-  background: radial-gradient(circle,rgb(167, 165, 165) 0,#fffefe 100%);
+  background: radial-gradient(circle,rgb(255, 255, 255) 0,#e4e3e3 100%);
   background-attachment: fixed;
+  font-family: 'Poppins', sans-serif;
 }
 img{
   width: 200px;
@@ -344,7 +478,7 @@ img{
 
 .card-head {
   position: relative;
-  height: 202px;
+  height: 220px;
   
 }
 
@@ -360,27 +494,16 @@ img{
   margin-left: 50px;
 }
 
-/* .back-text {
-  display: inline-block;
-  font-size: 3rem;
-  font-weight: 900;
-  margin-left: -7px;
-  margin-top: -12px;
-  opacity: 0.3;
-  position: relative;
-  bottom: 20px;
-} */
-
 .card-body {
-  height: 255px;
+  height: 220px;
   background: #fff;
   border-radius: 0 0 25px 25px;
 }
 
 .product-title {
-  padding: 20px 20px 5px 20px;
+  padding: 20px 0px 5px 20px;
   display: block;
-  font-size: 17px;
+  font-size: 13px;
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
@@ -406,15 +529,12 @@ img{
 }
 
 .product-stats h4 {
-  font-size: 1rem;
-  padding: 0 21px;
-  margin-top: 10px;
-  padding-bottom: 10px;
+  font-size: 0.8rem;
+  padding: 0 0px;
   text-transform: uppercase;
-  width: 180px;
   text-align: center;
   border-top: 0.1px solid rgba(206, 203, 203, 0.452);
-  padding-top: 20px;
+  padding-top: 10px;
 
 }
 .product-stats{
@@ -431,6 +551,7 @@ img{
   align-items: center;
   justify-content: center;
   margin-bottom: 15px;
+  margin-top: 20px;
 
 }
 
@@ -464,15 +585,144 @@ img{
 }
 
 .card__number{
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
 
 .card__text{
   color: rgb(73, 73, 73);
+  font-size: 0.9rem;
 }
 
-.container-icons__padre{
+
+
+.bg{
+  background:linear-gradient(to right, rgb(15, 23, 42), rgb(28, 92, 135), rgb(15, 23, 42));
+  
+}
+.pokeinfo{
   display: flex;
-  gap: 20px;
   justify-content: center;
+  align-items: center;
+  height: 500px;
+  color: #cde8ff;
+  
+}
+.pokeinfo-skills{
+    width: 20%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+.pokeinfo-image{
+  width: 30%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.pokeinfo-image img{
+  width: 450px;
+}
+.pokeinfo-stats{
+  width: 20%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.pokeinfo-image h1{
+  text-align: center;
+  text-transform: uppercase;
+  
+  font-weight: 500;
+  font-size: 3rem;
+  position: relative;
+  bottom: 30px;
+  
+}
+
+/* aqui las waves mi bro */
+
+.waves {
+  position:relative;
+  width: 100%;
+  height:115vh;
+  margin-bottom:-7px; /*Fix for safari gap*/
+  min-height:200px;
+  max-height:150px;
+}
+
+.content {
+  position:relative;
+  height:20vh;
+  text-align:center;
+}
+
+/* Animation */
+
+.parallax > use {
+  animation: move-forever 25s cubic-bezier(.55,.5,.45,.5)     infinite;
+}
+.parallax > use:nth-child(1) {
+  animation-delay: -2s;
+  animation-duration: 7s;
+}
+.parallax > use:nth-child(2) {
+  animation-delay: -3s;
+  animation-duration: 10s;
+}
+.parallax > use:nth-child(3) {
+  animation-delay: -4s;
+  animation-duration: 13s;
+}
+.parallax > use:nth-child(4) {
+  animation-delay: -5s;
+  animation-duration: 20s;
+  height: 300px;
+}
+@keyframes move-forever {
+  0% {
+    transform: translate3d(-90px,0,0);
+  }
+  100% { 
+    transform: translate3d(85px,0,0);
+  }
+}
+/*Shrinking for mobile*/
+@media (max-width: 768px) {
+  .waves {
+    height:40px;
+    min-height:40px;
+  }
+  .content {
+    height:30vh;
+  }
+  h1 {
+    font-size:24px;
+  }
+}
+
+.new{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  height: 600px;
+  background-color: #ffffff;
+  gap: 150px;
+  text-align: center;
+  font-weight: 500;
+  
+}
+
+.new div{
+  display: flex;
+  flex-direction: column;
+  gap: 60px;
+  
+}
+
+.margin-top{
+  margin-top: 30px;
 }
